# AniScript

./: .gitignore  CMakeLists.txt  README.md
src/: errormsg.c  lex.l  lex.yy.c  util.c
src/include/: tokens.h
